Post jquery update

--- a/aboutus.html
+++ b/aboutus.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Cheng Foundation About Us</title>
+		<title>About Us-The Cheng Foundation</title>
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 		<link href="styles/main.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -38,17 +39,18 @@
 					        <li><a href="ourwork.html">Our Work</a></li>
 					        <li><a href="properties.html">Properties</a></li>
 					        <li><a href="donations.html">Donations</a></li>
+					        <li><a href="accepteddonations.html">Accepted Donations</a></li>
 					        <li><a href="testimonials.html">Testimonials</a></li>
 					      </ul>
 					      <!-- Right aligned links -->
 					      <ul class="nav navbar-nav navbar-right">
 						    <li>
-					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://facebook.com">
+					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://www.facebook.com/bryce.cheng.1">
 		   							<span class="fa fa-facebook"></span>
 		  						</a>
 		  					</li>
 		  					<li>
-					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com">
+					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com/bryce_cheng">
 		   							<span class="fa fa-twitter"></span>
 		  						</a>
 		  					</li>
@@ -79,34 +81,32 @@
 		    	<img class="img-responsive center-block" src = "images/Bry_Close_Hori.jpg">
 		  		<p class = "cent_text big_print"><strong>Childhood</strong></p> 
 				<p>At an early age, Bryce Cheng was tasked with the heavy burden of upholding the prestigious
-				Cheng Family Legacy. As the oldest of the "twin dragons,"" Bryce was tasked with "making the Cheng
+				Cheng Dynasty's legacy. As the oldest of the "twin dragons," Bryce was tasked with "making the Cheng
 				Family great again" in the then foreign continent of North America. Alongside his younger brother,
-				Darrell, Bryce underwent integrated training in University of Washington Academy for Young Scholars to
-				acquire the skills that are necessary to survive in the brutal and capitalist world of the United States.</p>
+				Darrell, Bryce underwent integrated training at the University of Washington Academy for Young Scholars to
+				acquire the skills necessary to survive in the brutal and capitalist world of the United States.</p>
 				<p class = "cent_text big_print"><strong>Rice to Greatness</strong></p> 
-				<p>After receiving a "miniscule" loan of two-million dollars from their family fortune,
+				<p>After receiving a "miniscule" loan of 500-million dollars from their family fortune,
 
 				Bryce established a strong foothold in the American economy by investing in construction through his
 
-				newfound company, The Cheng Organization. Through said company, Bryce monopolized the market
+				newfound company, The Cheng Organization. Through The Cheng Organization, Bryce monopolized the market
 
-				for construction and property development (twice running Donald Trump Bankrupt). In addition, Bryce
+				for construction and property development (twice running Donald Trump bankrupt). In addition, Bryce
 
-				was able to curb the inevitable downsizing through lobbying and bribery of the U.S. government with his
+				was able to curb downsizing through a combination of lobbying and bribery of the U.S. government with his
 
-				now 30-billion dollar net worth.</p>
+				now 50-billion dollar net worth.</p>
 				<p class = "cent_text big_print"><strong>Enlightenment and Future Investment in Philanthropy</strong></p>
 				<p>After monopolizing the construction market
 
-				through aggressive negotiations and heartless actions, Bryce Cheng was now a leading figure in
+				through his trademark aggressive negociating strategy, Bryce Cheng was now a leading figure in the
 
-				American Business earning himself a position in the Fortune 500. However, Cheng was haunted by the
+				American business world earning himself a position at the top of the Fortune 500. However, Cheng was haunted by the
 
-				costs of his success in the construction market after witnessing the countless competitors that lay
+				effects of his success in the construction market after witnessing the countless competitors that lay
 
-				bankrupt in the wake of his rise. In order to cope with the burdensome guilt of witnessing the
-
-				numerous failures that precipitated into his success, Bryce Cheng, with the help of Darrel Cheng (now
+				bankrupt as a result of his rise. In order to cope with his burdensome guilt, Bryce Cheng, with the help of Darrel Cheng (now
 
 				CEO of Cheng Consolidated Entertainment Facilities), merged to found the Cheng Foundation.</p>
 
@@ -119,17 +119,17 @@
 		 	<div class="panel-body">
 		    	<img class="img-responsive center-block" src = "images/Dar_Hori.jpg" alt="Darrell Cheng">
 		 		<p class = "cent_text big_print"><strong>Childhood</strong></p> 
-		  		<p>In his childhood, Darrell was constantly neglected by his parents due to being the younger
+		  		<p>During his childhood, Darrell was constantly neglected by his parents due to being the younger
 
 				child. This constant neglect during his development prompted Darrell to train intensively in order to one
 
 				day surpass his brother, Bryce. As the other half of the "Twin Dragons," Darrell went to the University of
 
-				Washington Academy for Young Scholars in order to gain the skills necessary to survive in the high-stakes business environment.</p>
+				Washington Academy for Young Scholars in order to gain the skills necessary to survive in a high-stakes business environment.</p>
 				<p class = "cent_text big_print"><strong>Rice to Greatness</strong></p> 
-				<p>After graduating from the University of Washing Academy for Young Scholars, Cheng
+				<p>After graduating from the University of Washington Academy for Young Scholars, Cheng
 
-				established a strong foothold in the Entertainment Business by constructing a slew of high-end night
+				established a strong foothold in the Entertainment business by constructing a slew of high-end night
 
 				clubs in government-designated brownfields, lands previously considered "lost" due to excessive human
 
@@ -149,7 +149,7 @@
 
 				much was known during his five month excursion, but Darrell proclaimed himself a changed man after
 
-				he was rescued by Mongolian Fisherman. In order to atone for his past actions as a playboy leach of the
+				he was rescued by Mongolian fisherman. In order to atone for his past actions as a playboy leach of the
 
 				Cheng Family, Darrell co-founded the Cheng foundation with his brother, Bryce.</p>
 		 	</div>
