--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Cheng Foundation Official Website</title>
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 		<link href="styles/main.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -38,17 +39,18 @@
 				        <li><a href="ourwork.html">Our Work</a></li>
 				        <li><a href="properties.html">Properties</a></li>
 				        <li><a href="donations.html">Donations</a></li>
+				        <li><a href="accepteddonations.html">Accepted Donations</a></li>
 				        <li><a href="testimonials.html">Testimonials</a></li>
 				      </ul>
 				      <!-- Right aligned links -->
 				      <ul class="nav navbar-nav navbar-right">
 				      	<li>
-				        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://facebook.com">
+				        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://www.facebook.com/bryce.cheng.1">
 	   							<span class="fa fa-facebook"></span>
 	  						</a>
 	  					</li>
 	  					<li>
-				        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com">
+				        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com/bryce_cheng">
 	   							<span class="fa fa-twitter"></span>
 	  						</a>
 	  					</li>
