--- a/ourwork.html
+++ b/ourwork.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-			<title>Cheng Foundation Our Work</title>
+			<title>Our Work-The Cheng Foundation</title>
+			<link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 			<link href="styles/main.css" rel="stylesheet">
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -38,17 +39,18 @@
 					        <li class = "active"><a href="ourwork.html">Our Work</a></li>
 					        <li><a href="properties.html">Properties</a></li>
 					        <li><a href="donations.html">Donations</a></li>
+					        <li><a href="accepteddonations.html">Accepted Donations</a></li>
 					        <li><a href="testimonials.html">Testimonials</a></li>
 					      </ul>
 					      <!-- Right aligned links -->
 					      <ul class="nav navbar-nav navbar-right">
 						    <li>
-					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://facebook.com">
+					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://www.facebook.com/bryce.cheng.1">
 		   							<span class="fa fa-facebook"></span>
 		  						</a>
 		  					</li>
 		  					<li>
-					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com">
+					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com/bryce_cheng">
 		   							<span class="fa fa-twitter"></span>
 		  						</a>
 		  					</li>
@@ -74,9 +76,9 @@
 		<div class="container">
 			<div class="jumbotron grey_jumbotron">
 			 	<h1 class="imp_text">The CII Project</h1>
-			  	<p>The CII Project is the newest Cheng Foundation venture, through which the foundation strives to encourage cultural awareness.</p>
+			  	<p>The CII (Cultural Immigration and Integration) Project is the newest Cheng Foundation venture, through which the foundation strives to encourage cultural awareness.</p>
 			  	<div class = "cent_text">
-			  		<p><a class="btn btn-primary btn-lg" href="https://kb.construction-institute.org/" role="button">Join the CII Project</a></p>
+			  		<p><a class="btn btn-primary btn-lg" href="https://kb.construction-institute.org/" role="button" target="_blank">Join the CII Project</a></p>
 			  	</div>
 			</div>
 		</div>
@@ -86,7 +88,7 @@
 			  	<p>The Shaw Trust is dedicated towards improving the lives of Carmel High School students. Currently, the  
 			  	Trust is focused on funding the development of helicophter pads on top of local high schools.</p>
 			  	<div class = "cent_text">
-			  		<p><a class="btn btn-primary btn-lg" href="https://www.shaw-trust.org.uk/" role="button">Get involved with the Shaw Trust</a></p>
+			  		<p><a class="btn btn-primary btn-lg" href="https://www.shaw-trust.org.uk/" role="button" target = "_blank">Get involved with the Shaw Trust</a></p>
 			  	</div>
 			</div>
 		</div>
@@ -95,7 +97,7 @@
 			 	<h1 class="imp_text">The Madduri Partnership</h1>
 			  	<p>A partnership with fellow billionaire Sathvik Madduri to find the rarest artificats in existence. The partnership is responsible for the discovery of the Rosetta Stone and a multitude of other ancient works.</p>
 			  	<div class = "cent_text">
-			  		<p><a class="btn btn-primary btn-lg" href="http://events.pennwell.com/dtech2017/public/SpeakerDetails.aspx?FromPage=Speakers.aspx&ContactID=73566" role="button">Learn more about the partnership</a></p>
+			  		<p><a class="btn btn-primary btn-lg" href="http://events.pennwell.com/dtech2017/public/SpeakerDetails.aspx?FromPage=Speakers.aspx&ContactID=73566" role="button" target="_blank">Learn more about the partnership</a></p>
 			  	</div>
 			</div>
 		</div>
