--- a/testimonials.html
+++ b/testimonials.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-			<title>Cheng Foundation Testimonials</title>
+			<title>Testimonials-The Cheng Foundation</title>
+			<link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 			<link href="styles/main.css" rel="stylesheet">
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -38,17 +39,18 @@
 					        <li><a href="ourwork.html">Our Work</a></li>
 					        <li><a href="properties.html">Properties</a></li>
 					        <li><a href="donations.html">Donations</a></li>
+					        <li><a href="accepteddonations.html">Accepted Donations</a></li>
 					        <li class="active"><a href="testimonials.html">Testimonials</a></li>
 					      </ul>
 					      <!-- Right aligned links -->
 					      <ul class="nav navbar-nav navbar-right">
 						    <li>
-					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://facebook.com">
+					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://www.facebook.com/bryce.cheng.1">
 		   							<span class="fa fa-facebook"></span>
 		  						</a>
 		  					</li>
 		  					<li>
-					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com">
+					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com/bryce_cheng">
 		   							<span class="fa fa-twitter"></span>
 		  						</a>
 		  					</li>
@@ -72,42 +74,71 @@
 		<h1 class="imp_text cent_text pg_head"><strong>Testimonials</strong></h1>
 		<h4 class="cent_text">Here are some anonymous scrambled responses from a few of our satisfied clients.</h4>
 		<!-- <div class="test_holder"> -->
-			<div class="panel panel-default col-lg-6 col-lg-offset-3">
-				<div class="panel-heading">
-					<h3 class="panel-title cent_text">Warry Bei</h3>
+			<div class="panel panel-default col-lg-6 col-lg-offset-3 med_pad_bot">
+				<div class="panel-heading close_barry">
+					<h3 class="panel-title cent_text">Warry Bei <span class="pull-right glyphicon glyphicon-menu-down"></span> </h3> 
+					
+
 				</div>
-				<div class="panel-body">
+				<div class="panel-body close_barry_this">
 					<!-- <img class="testimonial_img img-responsive center-block" src=images/Barry.JPG alt="Barry"> -->
 					<p class="imp_text big_print ">"The Cheng Grant Organization was responsible for changing my life through allowing me to leave my home and form my own crippling impoverished community."</p>
 				</div>
 			</div>
-			<div class="panel panel-default col-lg-6 col-lg-offset-3">
-				<div class="panel-heading">
-					<h3 class="panel-title cent_text">Cevin Khen</h3>
+			<div class="panel panel-default col-lg-6 col-lg-offset-3 med_pad_bot">
+				<div class="panel-heading close_kevin">
+					<h3 class="panel-title cent_text">Cevin Khen <span class="pull-right glyphicon glyphicon-menu-down"></span></h3>
 				</div>
-				<div class="panel-body">
+				<div class="panel-body close_kevin_this">
 					<!-- <img class="testimonial_img img-responsive center-block" src=images/Kevin_Hori.JPG alt="Kevin"> -->
 					<p class="imp_text big_print ">"The Cheng Foundation ruined my life. Because of the Cheng Food Aid Program, I now live in a cardboard box shack."</p>
 				</div>
 			</div>
-			<div class="panel panel-default col-lg-6 col-lg-offset-3">
-				<div class="panel-heading">
-					<h3 class="panel-title cent_text">Zllen Aheng</h3>
+			<div class="panel panel-default col-lg-6 col-lg-offset-3 med_pad_bot">
+				<div class="panel-heading close_allen">
+					<h3 class="panel-title cent_text">Zllen Aheng <span class="pull-right glyphicon glyphicon-menu-down"></span></h3>
 				</div>
-				<div class="panel-body">
+				<div class="panel-body close_allen_this">
 					<!-- <img class="testimonial_img img-responsive center-block" src=images/Zheng_Vert2.JPG alt="Allen"> -->
-					<p class="imp_text big_print">"The Cheng Foundation helped me get into Bone Pit and accomplish my various Clash Royale goals through their grant program."</p>
+					<p class="imp_text big_print">"The Cheng Foundation demoted me back into Bone Pit through their grant program."</p>
 				</div>
 			</div>			
-			<div class="panel panel-default col-lg-6 col-lg-offset-3">
-				<div class="panel-heading">
-					<h3 class="panel-title cent_text">Laniel Dee</h3>
+			<div class="panel panel-default col-lg-6 col-lg-offset-3 med_pad_bot">
+				<div class="panel-heading close_daniel">
+					<h3 class="panel-title cent_text">Laniel Dee <span class="pull-right glyphicon glyphicon-menu-down"></span></h3>
 				</div>
-				<div class="panel-body">
+				<div class="panel-body close_daniel_this">
 					<!-- <img class="testimonial_img img-responsive center-block" src=images/Zheng_Vert2.JPG alt="Allen"> -->
 					<p class="imp_text big_print">"Mem."</p>
 				</div>
-			</div>	
+			</div>
+			<div class="panel panel-default col-lg-6 col-lg-offset-3 med_pad_bot">
+				<div class="panel-heading close_julien">
+					<h3 class="panel-title cent_text">Zulien Jhu <span class="pull-right glyphicon glyphicon-menu-down"></span></h3>
+				</div>
+				<div class="panel-body close_julien_this">
+					<!-- <img class="testimonial_img img-responsive center-block" src=images/Zheng_Vert2.JPG alt="Allen"> -->
+					<p class="imp_text big_print">"Are we still friends?"</p>
+				</div>
+			</div>
+			<div class="panel panel-default col-lg-6 col-lg-offset-3 med_pad_bot">
+				<div class="panel-heading close_satvik">
+					<h3 class="panel-title cent_text">Matvik Sadduri <span class="pull-right glyphicon glyphicon-menu-down"></span></h3>
+				</div>
+				<div class="panel-body close_satvik_this">
+					<!-- <img class="testimonial_img img-responsive center-block" src=images/Zheng_Vert2.JPG alt="Allen"> -->
+					<p class="imp_text big_print">"The Cheng Foundation scammed me out of my entire fortune when I partnered with them. I now live in a cardboard box shack."</p>
+				</div>
+			</div>
+			<div class="panel panel-default col-lg-6 col-lg-offset-3 med_pad_bot">
+				<div class="panel-heading close_jason">
+					<h3 class="panel-title cent_text">Sason Jhaw <span class="pull-right glyphicon glyphicon-menu-down"></span></h3>
+				</div>
+				<div class="panel-body close_jason_this">
+					<!-- <img class="testimonial_img img-responsive center-block" src=images/Zheng_Vert2.JPG alt="Allen"> -->
+					<p class="imp_text big_print">"INSTAGRAM POST CAPTION HERE"</p>
+				</div>
+			</div>
 		<!-- </div> -->
 		<footer class="footer">
 			<div class="container">
@@ -117,4 +148,46 @@
 	</body>
 	<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script>
+	$(document).ready(function(){
+		function close_everything_init(){
+			$(".close_barry_this").fadeToggle(0); 
+			$(".close_kevin_this").fadeToggle(0); 			
+			$(".close_allen_this").fadeToggle(0);
+			$(".close_daniel_this").fadeToggle(0);
+			$(".close_julien_this").fadeToggle(0); 
+			$(".close_satvik_this").fadeToggle(0); 
+			$(".close_jason_this").fadeToggle(0);   
+		}
+		function change_barry_credits(){
+			$(".close_barry_this").fadeToggle(200); 
+		}
+		function change_kevin_credits(){
+			$(".close_kevin_this").fadeToggle(200); 
+		}	 
+		function change_allen_credits(){
+			$(".close_allen_this").fadeToggle(200); 
+		}
+		function change_daniel_credits(){
+			$(".close_daniel_this").fadeToggle(200); 
+		}
+		function change_julien_credits(){
+			$(".close_julien_this").fadeToggle(200); 
+		}
+		function change_satvik_credits(){
+			$(".close_satvik_this").fadeToggle(200); 
+		}
+		function change_jason_credits(){
+			$(".close_jason_this").fadeToggle(200); 
+		}
+		close_everything_init() 
+		$('.close_barry').on("click",change_barry_credits)
+		$('.close_kevin').on("click",change_kevin_credits)
+		$('.close_allen').on("click",change_allen_credits)
+		$('.close_daniel').on("click",change_daniel_credits)
+		$('.close_julien').on("click",change_julien_credits)
+		$('.close_satvik').on("click",change_satvik_credits)
+		$('.close_jason').on("click",change_jason_credits)		
+	});
+	</script>
 </html>
